--- a/app/src/main/res/layout/activity_show_list_order.xml
+++ b/app/src/main/res/layout/activity_show_list_order.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="clickBackShowListOrder"
-        android:text="Back"
+        android:text="@string/back"
         android:id="@+id/button12"
         android:layout_alignParentBottom="true"
         android:textColor="@color/text" />
@@ -36,7 +36,7 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Date"
+            android:text="@string/date"
             android:id="@+id/textView35"
             android:layout_weight="2"
             android:textSize="@dimen/h2"
@@ -45,7 +45,7 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Coffee"
+            android:text="@string/coffee"
             android:id="@+id/textView36"
             android:layout_weight="3"
             android:textSize="@dimen/h2"
@@ -54,16 +54,16 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Vol"
+            android:text="@string/vol"
             android:id="@+id/textView37"
-            android:layout_weight="1"
+            android:layout_weight="1.5"
             android:textSize="@dimen/h2"
             android:textColor="@color/text" />
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Sta"
+            android:text="@string/sta"
             android:id="@+id/textView38"
             android:layout_weight="1"
             android:textSize="@dimen/h2"
