--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -73,7 +73,8 @@
             android:textColor="@color/text"
             android:textColorHint="@color/text"
             android:background="#82ffffff"
-            android:padding="10dp" />
+            android:padding="10dp"
+            android:layout_marginTop="15dp" />
 
         <EditText
             android:layout_width="match_parent"
