--- a/app/src/main/res/layout/activity_show_list_order.xml
+++ b/app/src/main/res/layout/activity_show_list_order.xml
@@ -49,7 +49,8 @@
             android:id="@+id/textView36"
             android:layout_weight="3"
             android:textSize="@dimen/h2"
-            android:textColor="@color/text" />
+            android:textColor="@color/text"
+            android:layout_marginLeft="25dp" />
 
         <TextView
             android:layout_width="0dp"
